# gdk-rs

./: .env  Cargo.toml  FEATURES.md  batch_process_tests.sh  error_inventory.txt  extract_test_module.py  process_tests.sh  simple_hw_test  simple_hw_test.rs  simple_pin_test  simple_pin_test.rs  test_address.rs  test_auth_standalone.rs  test_bip39_standalone.rs  test_hw_auth_standalone.rs  test_mapping.md  test_pubkey.rs  test_watch_only_auth  test_watch_only_auth.rs
.cargo/: config.toml
benches/: bip39_benchmarks.rs  crypto_benchmarks.rs  transaction_benchmarks.rs
docs/: README.md  api-reference.md  getting-started.md  migration-guide.md  testing-with-features.md  troubleshooting.md
src/: assets.rs  auth.rs  bip39.rs  bip39.rs.backup  error.rs  hw.rs  jsonrpc.rs  lib.rs  network.rs  notifications.rs  protocol.rs  session.rs  tor.rs  transaction_builder.rs  transaction_signer.rs  types.rs  utils.rs  wallet.rs  wallet_address_tests.rs  wallet_simple_tests.rs  wallet_transaction_tests.rs
tests/: address_test.rs  api_transactions_test.rs  assets_test.rs  auth_test.rs  bip39_comprehensive_test.rs  bip39_test.rs  bip39_tests.rs  debug_hang_test.rs  error_comprehensive_test.rs  feature_tests.rs  hw_test.rs  integration_transaction_flows_test.rs  integration_transaction_flows_test_simplified.rs  integration_wallet_flows_test.rs  network_test.rs  primitives_address_test.rs  primitives_bip32_test.rs  primitives_liquid_test.rs  primitives_psbt_test.rs  primitives_script_test.rs  primitives_transaction_test.rs  security_tests.rs  session_tests.rs  transaction_builder_comprehensive_test.rs  transaction_builder_test.rs  transaction_signer_test.rs  utils_crypto_test.rs  utils_test.rs  wallet_address_test.rs.disabled  wallet_simple_test.rs.disabled  wallet_transaction_test.rs.disabled
(+32 files in other folders)
