[package]
name = "gdk-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "gdk_rs"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
url = "2.4"

# Bitcoin & Liquid
# bitcoin = "0.31" # Reimplementing necessary parts.
# elements = "0.22" # Not usable, will reimplement necessary parts.

# Cryptography
base58check = "0.1.0"
base58 = "0.2"
bech32 = "0.9"
hmac = "0.12"
num-bigint = "0.4"
aes-gcm = "0.10"
# bip39 = "2.0" # Reimplementing necessary parts
pbkdf2 = "0.11"
secp256k1 = { version = "0.28", features = ["global-context", "recovery", "serde"] }
hex = "0.4"
ripemd = "0.1"
sha2 = "0.10"
rand = "0.8"
subtle = "2.5"
async-trait = "0.1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
native-tls = "0.2"

# Error Handling & Logging
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# Compression (optional)
flate2 = { version = "1.0", optional = true }

[features]
default = []
hardware-wallets = []
tor-support = []
compression = ["flate2"]

[dev-dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
tower-http = { version = "0.5", features = ["fs"] }
base64 = "0.21"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "transaction_benchmarks"
harness = false

[[bench]]
name = "bip39_benchmarks"
harness = false
